--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,49 @@
+:root {
+    --red: red;
+    --dark-gray: #252525;
+}
+
 body {
     background-color: #333333;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     display: flex;
+    flex-direction: column;
     padding: 0px;
+}
+
+header {
+    position: fixed;
+    background-color: var(--red);
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    padding: 0px;
+    border-bottom: 10px solid white;
+    z-index: 5;
+    display: flex;
+    justify-content: space-between;
+}
+
+header h1 {
+    margin: 10px;
+    display: inline-block;
+    margin-top: auto;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    color: white;
+}
+
+header input {
+    background-color: var(--dark-gray);
+    right: 10px;
+    border-radius: 10px;
+    border: none;
+    height: 25px;
+    width: 200px;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: 10px;
+    color: white;
 }
 
 button {
@@ -13,28 +54,65 @@ button {
 }
 
 aside {
-    background-color: red;
+    background-color: var(--red);
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
+    border-top: 5px solid white;
+    border-bottom: 5px solid white;
     position: fixed;
     left: 0px;
     z-index: 5;
     top: 100px;
-    width: 200px;
+    width: 400px;
     display: flex;
+    justify-content: flex-end;
+    color: white;
+}
+
+footer {
+    width: 100%;
+    position: relative;
+    bottom: 0px;
+    text-align: center;
 }
 
 .collapse {
-    left: -150px;
+    left: -350px;
+}
+
+#filter_options {
+    width: 300px;
 }
 
 #toggle_filter_menu {
+    background-color: var(--red);
+    color: white;
+    cursor: pointer;
     width: 50px;
     display: flex;
     align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+#toggle_filter_menu:hover {
+    background-color: white;
+    color: var(--red);
+}
+
+aside h3 {
+    margin-bottom: 3px;
+}
+
+button:hover {
+    background-color: rgba(255, 255, 255, 1);
+    color: black;
 }
 
 .pokedex_container {
+    margin-top: 50px;
     display: flex;
     justify-content: center;
     width: 100%;
@@ -42,14 +120,20 @@ aside {
 
 #pokedex {
     width: 90%;
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
+    display: flex;
+    flex-wrap: wrap;
+    /* display: grid;
+    grid-template-columns: repeat(8, 1fr); */
+    justify-content: center;
     border-radius: 20px;
-    background-color: #252525;
+    background-color: var(--dark-gray);
+    padding-bottom: 20px;
 }
 
 .pokemon_card {
-    margin: 20px;
+    margin: 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
     width: 130px;
     height: 170px;
     border-radius: 20px;
@@ -64,11 +148,12 @@ aside {
     -webkit-box-shadow:inset 0px 0px 0px 2px white;
     -moz-box-shadow:inset 0px 0px 0px 2px white;
     box-shadow:inset 0px 0px 0px 2px white;
+    cursor: pointer;
 }
 
 .pokemon_image_container {
     margin-top: 5px;
-    border-radius: 50px;
+    border-radius: 50%;
     background-image: linear-gradient(rgba(60, 60, 60, 1), rgba(60, 60, 60, 0.5));
     height: 120px;
     width: 90%;
